--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,31 @@
 !hello_world/
 !hello_world/*.cpp
 !hello_world/*.h
+
+!binary_trees/
+!binary_trees/*.cpp
+!binary_trees/*.h
+
+!classes_and_objects2/
+!classes_and_objects2/*.cpp
+!classes_and_objects2/*.h 
+
+!final_project2/
+!final_project2/*.cpp
+!final_project2/*.h 
+
+!hash_tables/
+!hash_tables/*.cpp
+!hash_tables/*.h 
+
+!int_stack/
+!int_stack/*.cpp
+!int_stack/*.h
+
+!linked_list/
+!linked_list/*.cpp
+!linked_list/*.h
+
+!real_stack/
+!real_stack/*.cpp
+!real_stack/*.h
